Fixed swagger inline schemas
